# SOLID_SO

./: CMakeLists.txt  ISetup.h  README.md  main.cpp  test_result.json
OOP/: CMakeLists.txt  Cercle.cpp  OOPSetup.cpp  Square.cpp
OOP/Includes/: Cercle.h  OOPSetup.h  Shape.h  Square.h
Strategy/: CMakeLists.txt  DrawStrategy.cpp  StrategySetup.cpp
Strategy/Includes/: Cercle.h  DrawStrategy.h  Shape.h  Square.h  StrategySetup.h
VariantVisitor/: CMakeLists.txt  DrawOp.cpp  VariantVisitorSetup.cpp
VariantVisitor/Includes/: Cercle.h  DrawOp.h  Square.h  VariantVisitorSetup.h
Visitor/: CMakeLists.txt  Cercle.cpp  DrawVisitor.cpp  Square.cpp  VisitorSetup.cpp
Visitor/Includes/: Cercle.h  DrawVisitor.h  Shape.h  Square.h  Visitor.h  VisitorSetup.h
enums/: CMakeLists.txt  Cercle.cpp  EnumSetup.cpp  EnumSetup.h  Square.cpp
enums/Includes/: Cercle.h  EnumSetup.h  Shape.h  Square.h
